--- a/crossword-squared/08.html
+++ b/crossword-squared/08.html
@@ -56,7 +56,7 @@
 		<div id="across">
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
 			<p onclick="clue(1, true)">1.&emsp;Type of painting that would be difficult to lend to a museum</p>
-			<p onclick="clue(6, true)">6.&emsp;My hearty been stew, made with spicy peppers, is cold!</p>
+			<p onclick="clue(6, true)">6.&emsp;My hearty bean stew, made with spicy peppers, is cold!</p>
 			<p onclick="clue(11, true)">7.&emsp;The IRS might want to double check...</p>
 			<p onclick="clue(16, true)">8.&emsp;Could be a pirates booty, could be a collection of relevant books found at a library. It's valuable and discovered.</p>
 			<p onclick="clue(21, true)">9.&emsp;Where you might keep your <i>(8 across)</i></p>
