--- a/crossword-squared/08.html
+++ b/crossword-squared/08.html
@@ -58,8 +58,8 @@
 			<p onclick="clue(1, true)">1.&emsp;Type of painting that would be difficult to lend to a museum</p>
 			<p onclick="clue(6, true)">6.&emsp;My hearty bean stew, made with spicy peppers, is cold!</p>
 			<p onclick="clue(11, true)">7.&emsp;The IRS might want to double check...</p>
-			<p onclick="clue(16, true)">8.&emsp;Could be a pirates booty, could be a collection of relevant books found at a library. It's valuable and discovered.</p>
-			<p onclick="clue(21, true)">9.&emsp;Where you might keep your <i>(8 across)</i></p>
+			<p onclick="clue(16, true)">8.&emsp;Could be a pirates booty, could be a collection of relevant books found at a library. It's valuable and discoverable.</p>
+			<p onclick="clue(21, true)">9.&emsp;Beefy lockers?</i></p>
 		</div>
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
@@ -91,5 +91,4 @@
 		</div>
 	</body>
 </html>
-
 
