--- a/crossword-squared/09.html
+++ b/crossword-squared/09.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>5x5 crossword 08</title>
+		<title>5x5 crossword 09</title>
 		<link rel="stylesheet" href="style.css"/>
-		<script>let goal = "muralchiliaudittrovesafes"; let crossnum = 7</script>
+		<script>let goal = "angledoragmtidaampedneeds"; let crossnum = 8</script>
 		<script src="script.js"></script>
 		<link rel="shortcut icon" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<link rel="icon" type="../image/png" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no">
-		<meta property="og:title" content="5x5 crossword 08" />
-		<meta property="og:description" content="The eighth five-by-five crossword in a series of twenty-five." />
+		<meta property="og:title" content="5x5 crossword 09" />
+		<meta property="og:description" content="The ninth five-by-five crossword in a series of twenty-five." />
 		<meta property="og:image" content="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/preview.png" />
 	</head>
 	<body>
 		<h1 id="settings" onclick="opensettings()">&#9881;</h1><h1 id="backbutton"><a href="index.html">&#x279E;</a></h1>
-		<h1>crossword 08</h1>
+		<h1>crossword 09</h1>
 		<input id="dummyinput" onfocusout="deselect()" oninput="dummyinput()"></input>
 		<table id="crossword">
 			<tr>
@@ -55,19 +55,19 @@
 		</table>
 		<div id="across">
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
-			<p onclick="clue(1, true)">1.&emsp;Type of painting that would be difficult to lend to a museum</p>
-			<p onclick="clue(6, true)">6.&emsp;My hearty bean stew, made with spicy peppers, is cold!</p>
-			<p onclick="clue(11, true)">7.&emsp;The IRS might want to double check...</p>
-			<p onclick="clue(16, true)">8.&emsp;Could be a pirates booty, could be a collection of relevant books found at a library. It's valuable and discoverable.</p>
-			<p onclick="clue(21, true)">9.&emsp;Beefy lockers?</i></p>
+			<p onclick="clue(1, true)">1.&emsp;Acute, for example</p>
+			<p onclick="clue(6, true)">6.&emsp;Covers waves or cornrows&emsp;</p>
+			<p onclick="clue(11, true)">7.&emsp;<q>Mountain of the Goddess,</q> alternatively a precocious telekinetic five-year-old is missing her <q>A</q></p>
+			<p onclick="clue(16, true)">8.&emsp;I&rsquo;m so excited to make this guitar louder!</p>
+			<p onclick="clue(21, true)">9.&emsp;Maslow&rsquo;s got a hierarchy of &rsquo;em</i></p>
 		</div>
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
-			<p onclick="clue(1, false)">1.&emsp;It might sound feline, but these are tests taken by prospective medical students</p>
-			<p onclick="clue(2, false)">2.&emsp;Nichelle Nichols plays Nyota  on TV</p>
-			<p onclick="clue(3, false)">3.&emsp;Something I&rsquo;d like to get <u>&emsp;&emsp;&emsp;&emsp;&emsp;</u>: bed bugs</p>
-			<p onclick="clue(4, false)">4.&emsp;If a WANTED person could choose how they&rsquo;re WANTED, they&rsquo;d choose this option.</p>
-			<p onclick="clue(5, false)">5.&emsp;Millers for people who want less of the taste!</p>
+			<p onclick="clue(1, false)">1.&emsp;Just a regular Billy Mays</p>
+			<p onclick="clue(2, false)">2.&emsp;Who wants to do the dishes?</p>
+			<p onclick="clue(3, false)">3.&emsp;I&rsquo;ve got a bone to pick!</p>
+			<p onclick="clue(4, false)">4.&emsp;Loaded with cargo</p>
+			<p onclick="clue(5, false)">5.&emsp;Oh <u>&emsp;&emsp;&emsp;&emsp;&emsp;</u>! My roast is ruined! But what if...</p>
 		</div>
 		<div id="solved" class="invisable">
 			<div>
