--- a/crossword-squared/09.html
+++ b/crossword-squared/09.html
@@ -57,7 +57,7 @@
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
 			<p onclick="clue(1, true)">1.&emsp;Acute, for example</p>
 			<p onclick="clue(6, true)">6.&emsp;Covers waves or cornrows&emsp;</p>
-			<p onclick="clue(11, true)">7.&emsp;<q>Mountain of the Goddess,</q> alternatively a precocious telekinetic five-year-old is missing her <q>A</q></p>
+			<p onclick="clue(11, true)">7.&emsp;<q>Mountain of the Goddess,</q> alternatively a precocious telekinetic five-year-old is missing her <q>A</q> and <q>L</q></p>
 			<p onclick="clue(16, true)">8.&emsp;I&rsquo;m so excited to make this guitar louder!</p>
 			<p onclick="clue(21, true)">9.&emsp;Maslow&rsquo;s got a hierarchy of &rsquo;em</i></p>
 		</div>
@@ -91,5 +91,4 @@
 		</div>
 	</body>
 </html>
-
 
