--- a/crossword-squared/12.html
+++ b/crossword-squared/12.html
@@ -66,7 +66,7 @@
 			<p onclick="clue(1, false)">1.&emsp;A Florida city known for its vice</p>
 			<p onclick="clue(2, false)">2.&emsp;DuPont created the first acrylic fibers in 1941 and trademarked them</p>
 			<p onclick="clue(3, false)">3.&emsp;He played Superman</p>
-			<p onclick="clue(4, false)">4.&emsp;When your name is Sesame and you want to visit your friend's cool man cave (that's a literal cave by the way) but he's got some kind of "smart" door that answers to commands so you say this word followed by your name to let the door know you want to come in and also who it is, but some people over heard you and think the words you just spoke are some kind of magic spell?</p>
+			<p onclick="clue(4, false)">4.&emsp;When your name is Sesame and you want to visit your friend's cool man cave (that's a literal cave by the way) but he's got some kind of "smart" door that answers to commands so you say <q>Open... Sesame</q> to let the door know you want to <u>&emsp;&emsp;&emsp;&emsp;&emsp;</u> and also who it is, but some people over heard you and think the words you just spoke are some kind of magic spell?</p>
 			<p onclick="clue(5, false)">5.&emsp;The opposite of most</p>
 		</div>
 		<div id="solved" class="invisable">
