--- a/crossword-squared/13.html
+++ b/crossword-squared/13.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>5x5 crossword 12</title>
+		<title>5x5 crossword 13</title>
 		<link rel="stylesheet" href="style.css"/>
-		<script>let goal = "morelirenealetamovesinert"; let crossnum = 11</script>
+		<script>let goal = "denimalinelukasedenskesey"; let crossnum = 12</script>
 		<script src="script.js"></script>
 		<link rel="shortcut icon" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<link rel="icon" type="../image/png" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no">
-		<meta property="og:title" content="5x5 crossword 12" />
-		<meta property="og:description" content="The twelfth five-by-five crossword in a series of twenty-five." />
+		<meta property="og:title" content="5x5 crossword 13" />
+		<meta property="og:description" content="The thirteenth five-by-five crossword in a series of twenty-five." />
 		<meta property="og:image" content="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/preview.png" />
 	</head>
 	<body>
 		<h1 id="settings" onclick="opensettings()">&#9881;</h1><h1 id="backbutton"><a href="index.html">&#x279E;</a></h1>
-		<h1>crossword 12</h1>
+		<h1>crossword 13</h1>
 		<input id="dummyinput" onfocusout="deselect()" oninput="dummyinput()"></input>
 		<table id="crossword">
 			<tr>
@@ -55,19 +55,19 @@
 		</table>
 		<div id="across">
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
-			<p onclick="clue(1, true)">1.&emsp;An edible mushroom with a sponge-like cap, sounds like the lesson of the story</p>
-			<p onclick="clue(6, true)">6.&emsp;The only woman Sherlock ever cared for might have been a Korean singer?</p>
-			<p onclick="clue(11, true)">7.&emsp;According to Prince Valiant she&rsquo;s Queen of the Misty Isles. According to Spike Lee she&rsquo;s Sister Robin. According to Captain America she&rsquo;s <q>Starhawk,</q> <q>Stakar,</q> the <q>One Who Knows,</q> or the <q>Giver of Light</q></p>
-			<p onclick="clue(16, true)">8.&emsp;When you become a break-dancer and you've got some neat tricks up your sleeve?</p>
-			<p onclick="clue(21, true)">9.&emsp;An object not in motion will stay not in motion</p>
+			<p onclick="clue(1, true)">1.&emsp;It&rsquo;s what a Canadian tuxedo is made out of!</p>
+			<p onclick="clue(6, true)">6.&emsp;To drop one is to call or write. To draw one is to have a personal boundary.</p>
+			<p onclick="clue(11, true)">7.&emsp;Mr. Foss. Composer, conductor, friend of Leonard Bernstein. His first name is the Latin form of a certain George&rsquo;s last name.</p>
+			<p onclick="clue(16, true)">8.&emsp;Belonging to the Garden of God</p>
+			<p onclick="clue(21, true)">9.&emsp;<q>One Flew Over the Cuckoo&rsquo;s Nest</q> author</p>
 		</div>
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
-			<p onclick="clue(1, false)">1.&emsp;A Florida city known for its vice</p>
-			<p onclick="clue(2, false)">2.&emsp;DuPont created the first acrylic fibers in 1941 and trademarked them</p>
-			<p onclick="clue(3, false)">3.&emsp;He played Superman</p>
-			<p onclick="clue(4, false)">4.&emsp;When your name is Sesame and you want to visit your friend&rsquo;s cool man cave (that&rsquo;s a literal cave by the way) but he&rsquo;s got some kind of <q>smart</q> door that answers to commands so you say <q>Open... Sesame</q> to let the door know you want to <u>&emsp;&emsp;&emsp;&emsp;&emsp;</u> and also who it is, but some people over heard you and think the words you just spoke are some kind of magic spell?</p>
-			<p onclick="clue(5, false)">5.&emsp;The opposite of most</p>
+			<p onclick="clue(1, false)">1.&emsp;Alien space Nazi that looks like a pepper shaker?</p>
+			<p onclick="clue(2, false)">2.&emsp;Make some kind of vague reference to, without saying it outright. Kind of like a crossword clue.</p>
+			<p onclick="clue(3, false)">3.&emsp;Shoes with a swoosh.</p>
+			<p onclick="clue(4, false)">4.&emsp;Lacking sense or meaning. So boring as to be incoherent. </p>
+			<p onclick="clue(5, false)">5.&emsp;Disorderly, organized, maybe even dirty. Like some divorces or the desk of someone who actually gets stuff done.</p>
 		</div>
 		<div id="solved" class="invisable">
 			<div>
