--- a/crossword-squared/13.html
+++ b/crossword-squared/13.html
@@ -64,7 +64,7 @@
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
 			<p onclick="clue(1, false)">1.&emsp;Alien space Nazi that looks like a pepper shaker?</p>
-			<p onclick="clue(2, false)">2.&emsp;Make some kind of vague reference to, without saying it outright. Kind of like a crossword clue.</p>
+			<p onclick="clue(2, false)">2.&emsp;I had an great idea for a clue but that idea has escaped the perception, understanding, or grasp of me.</p>
 			<p onclick="clue(3, false)">3.&emsp;Shoes with a swoosh.</p>
 			<p onclick="clue(4, false)">4.&emsp;Lacking sense or meaning. So boring as to be incoherent. </p>
 			<p onclick="clue(5, false)">5.&emsp;Disorderly, organized, maybe even dirty. Like some divorces or the desk of someone who actually gets stuff done.</p>
