--- a/crossword-squared/14.html
+++ b/crossword-squared/14.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>5x5 crossword 13</title>
+		<title>5x5 crossword 14</title>
 		<link rel="stylesheet" href="style.css"/>
-		<script>let goal = "denimalinelukasedenskesey"; let crossnum = 12</script>
+		<script>let goal = "pabstelopealienrosesswede"; let crossnum = 13</script>
 		<script src="script.js"></script>
 		<link rel="shortcut icon" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<link rel="icon" type="../image/png" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no">
-		<meta property="og:title" content="5x5 crossword 13" />
-		<meta property="og:description" content="The thirteenth five-by-five crossword in a series of twenty-five." />
+		<meta property="og:title" content="5x5 crossword 14" />
+		<meta property="og:description" content="The fourteenth five-by-five crossword in a series of twenty-five." />
 		<meta property="og:image" content="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/preview.png" />
 	</head>
 	<body>
 		<h1 id="settings" onclick="opensettings()">&#9881;</h1><h1 id="backbutton"><a href="index.html">&#x279E;</a></h1>
-		<h1>crossword 13</h1>
+		<h1>crossword 14</h1>
 		<input id="dummyinput" onfocusout="deselect()" oninput="dummyinput()"></input>
 		<table id="crossword">
 			<tr>
@@ -55,19 +55,19 @@
 		</table>
 		<div id="across">
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
-			<p onclick="clue(1, true)">1.&emsp;It&rsquo;s what a Canadian tuxedo is made out of!</p>
-			<p onclick="clue(6, true)">6.&emsp;To drop one is to call or write. To draw one is to have a personal boundary.</p>
-			<p onclick="clue(11, true)">7.&emsp;Mr. Foss. Composer, conductor, friend of Leonard Bernstein. His first name is the Latin form of a certain George&rsquo;s last name.</p>
-			<p onclick="clue(16, true)">8.&emsp;Belonging to the Garden of God</p>
-			<p onclick="clue(21, true)">9.&emsp;<q>One Flew Over the Cuckoo&rsquo;s Nest</q> author</p>
+			<p onclick="clue(1, true)">1.&emsp;Known for their ribbon-winning brew</p>
+			<p onclick="clue(6, true)">6.&emsp;When your parents don&rsquo;t approve so you run away together?</p>
+			<p onclick="clue(11, true)">7.&emsp;I want one for Christmas (don&rsquo;t worry, he can live in the bathtub)</p>
+			<p onclick="clue(16, true)">8.&emsp;They&rsquo;re red I hear?</p>
+			<p onclick="clue(21, true)">9.&emsp;That puppet chef is famously one</p>
 		</div>
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
-			<p onclick="clue(1, false)">1.&emsp;Alien space Nazi that looks like a pepper shaker?</p>
-			<p onclick="clue(2, false)">2.&emsp;I had a great idea for a clue but that idea has escaped the perception, understanding, or grasp of me.</p>
-			<p onclick="clue(3, false)">3.&emsp;Shoes with a swoosh.</p>
-			<p onclick="clue(4, false)">4.&emsp;Lacking sense or meaning. So boring as to be incoherent. </p>
-			<p onclick="clue(5, false)">5.&emsp;Disorderly, organized, maybe even dirty. Like some divorces or the desk of someone who actually gets stuff done.</p>
+			<p onclick="clue(1, false)">1.&emsp;Pamela the cow loves them and will do anything to get them</p>
+			<p onclick="clue(2, false)">2.&emsp;<q>I&rsquo;ll permit it</q></p>
+			<p onclick="clue(3, false)">3.&emsp;The biggest city in Idaho</p>
+			<p onclick="clue(4, false)">4.&emsp;It&rsquo;s a type of drug, ball, and demon</p>
+			<p onclick="clue(5, false)">5.&emsp;I am nervous and stressed about writing the verbs in my crossword clues in a manor that expresses the proper time (past, present, future) the action took place.</p>
 		</div>
 		<div id="solved" class="invisable">
 			<div>
