--- a/crossword-squared/14.html
+++ b/crossword-squared/14.html
@@ -67,7 +67,7 @@
 			<p onclick="clue(2, false)">2.&emsp;<q>I&rsquo;ll permit it</q></p>
 			<p onclick="clue(3, false)">3.&emsp;The biggest city in Idaho</p>
 			<p onclick="clue(4, false)">4.&emsp;It&rsquo;s a type of drug, ball, and demon</p>
-			<p onclick="clue(5, false)">5.&emsp;I am nervous and stressed about writing the verbs in my crossword clues in a manor that expresses the proper time (past, present, future) the action took place.</p>
+			<p onclick="clue(5, false)">5.&emsp;I am nervous and stressed about writing the verbs in my crossword clues in a manner that expresses the proper time (past, present, future) the action took place.</p>
 		</div>
 		<div id="solved" class="invisable">
 			<div>
