--- a/crossword-squared/15.html
+++ b/crossword-squared/15.html
@@ -11,6 +11,12 @@
 		<meta property="og:title" content="5x5 crossword 15" />
 		<meta property="og:description" content="The fifteenth five-by-five crossword in a series of twenty-five." />
 		<meta property="og:image" content="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/preview.png" />
+		<style>
+			#allah {
+				height: 17.4px;
+				margin-left: 1px;
+			}
+		</style>
 	</head>
 	<body>
 		<h1 id="settings" onclick="opensettings()">&#9881;</h1><h1 id="backbutton"><a href="index.html">&#x279E;</a></h1>
@@ -63,7 +69,7 @@
 		</div>
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
-			<p onclick="clue(1, false)">1.&emsp;ٱَللَّٰهْ‎</p>
+			<p onclick="clue(1, false)">1.&emsp;<image id="allah" src="allah.svg"/></p>
 			<p onclick="clue(2, false)">2.&emsp;When wearing a crown is just a bit too much?</p>
 			<p onclick="clue(3, false)">3.&emsp;These <q>twins</q> are really just one person moving very fast</p>
 			<p onclick="clue(4, false)">4.&emsp;When done <q>en</q> it&rsquo;s all together. In pool, a trick shot.</p>
