--- a/crossword-squared/16.html
+++ b/crossword-squared/16.html
@@ -67,7 +67,7 @@
 			<p onclick="clue(2, false)">2.&emsp;Caused</p>
 			<p onclick="clue(3, false)">3.&emsp;Gay talk-show host</p>
 			<p onclick="clue(4, false)">4.&emsp;Needed to make guacamole</p>
-			<p onclick="clue(5, false)">5.&emsp;Did they have a name for the dace before we invented the machine?</p>
+			<p onclick="clue(5, false)">5.&emsp;Did they have a name for the dance before we invented the machine?</p>
 		</div>
 		<div id="solved" class="invisable">
 			<div>
